# kerios

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md
.claude/: CLAUDE.md  policy.yaml  settings.json
.claude/agents/: ai-developer.md  architect.md  business-analyst.md  change-manager.md  code-reviewer.md  data-governance.md  devops.md  kubernetes.md  product-owner.md  project-manager.md  rust.md  security.md  sre.md  tech-lead.md  terraform.md  ux-designer.md
.claude/commands/: analyze.md  bmad-act.md  bmad-break.md  bmad-deliver.md  bmad-help.md  bmad-model.md  bmad-run.md  checklist.md  clarify.md  code-only.md  docs-gen.md  gsd-prep.md  principles.md  ralph-loop.md  ralph.md  shard.md  ux-spec.md
.claude/output/: architecture.md  backlog.md  problem.md
.claude/rules/: agent-teams.md  api.md  documentation.md  frontend.md  post-edit-summary.md  security.md  testing.md
.claude/skills/acceptance-validator/: SKILL.md
.claude/skills/client-advocacy/: SKILL.md
.claude/skills/code-reviewer/: SKILL.md  code-quality-reviewer-prompt.md
.claude/skills/market-analysis/: SKILL.md
.claude/skills/performance-audit/: SKILL.md
.claude/skills/readme-updater/: SKILL.md
.claude/skills/security/: SKILL.md
.github/templates/: kerios.rb.in
.github/workflows/: bump-homebrew-tap.yml  ci.yml  release.yml
docker/: .gitignore  Dockerfile  README.md  compose.yaml  demo.sh  seed-repo.sh
docker/gitserver/: Dockerfile
docs/: architecture.md
kerios/: Cargo.toml
kerios-core/: Cargo.toml
kerios-core/src/: auth.rs  bootstrap.rs  config.rs  github_app.rs  lib.rs  merge.rs  secrets.rs  state.rs  sync.rs
kerios-core/src/providers/: claude.rs  codex.rs  copilot.rs  cursor.rs  mod.rs
kerios-core/src/sources/: git.rs  mod.rs
kerios-core/tests/fixtures/: test_rsa_2048.pem  test_rsa_2048.pub.pem
kerios/src/: main.rs
kerios/src/commands/: daemon.rs  enroll.rs  install.rs  mod.rs  shared.rs  status.rs  sync.rs  validate.rs
kerios/tests/: enroll_e2e.rs  sync_oneshot_e2e.rs
packaging/launchd/: io.artemislab.kerios.plist
packaging/systemd/: kerios.service
scripts/: install.sh
(+6 files in other folders)
