[package]
name = "kerios-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library for Kerios: config merge, policy engine, provider adapters"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
toml = "0.8"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
walkdir = "2"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[lints]
workspace = true
